clark: move init.mmi.touch.sh to ramdisk
Change-Id: I70ce4e1587814b67a41c9f2976587772b8569d71

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -573,6 +573,11 @@ service motosh /system/bin/motosh boot
     user compass
     group compass misc input mot_tcmd
     oneshot
+    
+service mmi-touch-sh /system/bin/sh /init.mmi.touch.sh synaptics
+    class core
+    user root
+    oneshot
 
 service adspd /system/bin/adspd
    class main
